# app/Http/Controllers/Controller.php
@@ -18,7 +18,17 @@ use Illuminate\Routing\Controller as BaseController;
  *     @OA\License(
  *         name="Apache 2.0",
  *         url="https://www.apache.org/licenses/LICENSE-2.0.html"
+ *     ),
  *     )
+ *     @OA\SecurityScheme(
+ *      securityScheme="bearerAuth",
+ *      in="header",
+ *      name="bearerAuth",
+ *      type="http",
+ *      scheme="bearer",
+ *      bearerFormat="JWT",   
+ * )
+ * 
  * )
  * @OA\Get(
  *      path="/",
